@@ -1,4 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
+03/08/2011
+- allow comment tags to comment {block} tags out in child templates
+
 26/07/2011
 - bugfix experimental getTags() method did not work
 
